updated methods and implementation of webElement